--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,17 @@
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 :root {
