--- a/src/components/quizesComponent/quizesComponent.scss
+++ b/src/components/quizesComponent/quizesComponent.scss
@@ -4,12 +4,54 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  .score {
-    padding: 10px 20px;
-    background-color: var(--color2);
-    border: 2px solid var(--color1);
-    margin-bottom: 8px;
+
+  .headerWrapper {
+
+    .score {
+      padding: 10px 20px;
+      background-color: var(--color2);
+      border: 2px solid var(--color1);
+      margin-bottom: 8px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .buttonWrapper {
+      padding: 15px;
+      display: flex;
+      flex-wrap: wrap;
+      row-gap: 16px;
+
+
+      .correct,
+      .incorrect {
+        width: 20%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        $dimension: 56px;
+        p {
+          height: $dimension;
+          width: $dimension;
+          background-color: var(--color7);
+          color: white;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          border-radius: 50%;
+          border: 2px solid rgb(110, 110, 110);
+          cursor: pointer;
+          color: black;
+        }
+      }
+      .correct p{
+        background-color: var(--color8);
+      }
+    }
   }
+
   .quizzesContainer {
     display: flex;
     flex-direction: column;
@@ -18,47 +60,57 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
     .quizComponent {
       background-color: var(--color2);
       padding: 20px;
       border-radius: 8px;
       max-width: min(850px, 90%);
       width: 100%;
+
       &.incorrect {
         background-color: var(--color7);
+
         .correct {
           // background-color: green;
           color: #00ff00;
         }
+
         .optionsContainer div:has(input[type="radio"]:checked) {
           color: red;
         }
       }
+
       &.correct {
         background-color: var(--color8);
       }
+
       .optionsContainer {
         display: flex;
         flex-direction: column;
         gap: 10px;
         padding: 15px 0px;
+
         .option {
           cursor: pointer;
           font-size: 1.15rem;
           display: flex;
           align-items: center;
           gap: 10px;
+
           label,
           input {
             cursor: pointer;
           }
-          input{
+
+          input {
             width: 20px;
             height: 20px;
             flex-shrink: 0;
           }
         }
       }
+
       .explanation {
         &.hidden {
           display: none;
@@ -66,8 +118,10 @@
       }
     }
   }
+
   .buttonContainer {
     padding: 15px;
+
     button {
       border: none;
       font-size: 1.5rem;
